VTK-1628 and gallery in image-folder - fix IE8 bug (set 'height: auto' even though 'max-height: 380px' is set and 'width: auto'). problem described on stackoverflow.com

--- a/src/main/resources/web/themes/default/image-listing-component.css
+++ b/src/main/resources/web/themes/default/image-listing-component.css
@@ -105,6 +105,8 @@
 
 .vrtx-image-listing-include .vrtx-image-listing-include-container img {
   max-height: 380px;
+  width: auto;
+  height: auto;
 }
 
 .vrtx-image-listing-include-container-link {
